--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta property="og:title" content="Free Fortnite Lobby Bots - LOBBYMOM">
   <meta property="og:description"
     content="Get instant access to free Fortnite lobby bots! Copy bot names to invite them to your lobby. Refreshed every 30 seconds.">
-  <meta property="og:image" content="https://lobby.mom/_awso/assets/LOBBYMOM.png">
+  <meta property="og:image" content="https://lobby.mom/https://lobby.mom/_awso/assets/LOBBYMOM.png">
 
   <!-- Social media preview: Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -40,10 +40,10 @@
   <meta property="twitter:title" content="Free Fortnite Lobby Bots - LOBBYMOM">
   <meta property="twitter:description"
     content="Get instant access to free Fortnite lobby bots! Copy bot names to invite them to your lobby. Refreshed every 30 seconds.">
-  <meta property="twitter:image" content="https://lobby.mom/_awso/assets/LOBBYMOM.png">
+  <meta property="twitter:image" content="https://lobby.mom/https://lobby.mom/_awso/assets/LOBBYMOM.png">
 
   <!-- Website icon (favicon) -->
-  <link rel="icon" type="image/png" href="_awso/assets/LOBBYMOM.png">
+  <link rel="icon" type="image/png" href="https://lobby.mom/_awso/assets/LOBBYMOM.png">
 
   <!-- Bootstrap 5.3 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -52,12 +52,12 @@
   <link rel="stylesheet" href="https://paycoin-php.vercel.app/assets/css/fontawesome.css">
 
   <!-- Custom styles -->
-  <link rel="stylesheet" href="_awso/css/awso.css">
+  <link rel="stylesheet" href="https://lobby.mom/_awso/css/awso.css">
 </head>
 <body class="d-flex justify-content-center align-items-center" style="height: 100vh;">
 
 <div class="text-center">
-    <img src="_awso/assets/loading.png" alt="Coming Soon" class="img-fluid" style="max-width: 300px;">
+    <img src="https://lobby.mom/_awso/assets/loading.png" alt="Coming Soon" class="img-fluid" style="max-width: 300px;">
     <h6 class="mt-3">Coming Soon..</h6>
     <button id="notifyBtn" class="notify-btn">
         <span id="btnText">GET NOTIFIED</span>
@@ -156,7 +156,7 @@ notifyBtn.addEventListener('click', async () => {
             // Send confirmation notification
             new Notification("You're subscribed!", {
                 body: "We'll notify you when we launch.",
-                icon: "_awso/assets/loading.png"
+                icon: "https://lobby.mom/_awso/assets/loading.png"
             });
         } else {
             statusText.textContent = "Please enable browser notifications";
@@ -188,7 +188,7 @@ function sendLaunchNotification() {
     if (localStorage.getItem('launchNotificationSubscribed') === 'true') {
         new Notification("We're Live!", {
             body: "Our service has officially launched!",
-            icon: "_awso/assets/loading.png",
+            icon: "https://lobby.mom/_awso/assets/loading.png",
             requireInteraction: true
         });
     }
