--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta property="og:title" content="Free Fortnite Lobby Bots - LOBBYMOM">
   <meta property="og:description"
     content="Get instant access to free Fortnite lobby bots! Copy bot names to invite them to your lobby. Refreshed every 30 seconds.">
-  <meta property="og:image" content="https://lobby.mom/https://lobby.mom/awso/assets/LOBBYMOM.png">
+  <meta property="og:image" content="https://lobby.mom/awso/assets/LOBBYMOM.png">
 
   <!-- Social media preview: Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -40,7 +40,7 @@
   <meta property="twitter:title" content="Free Fortnite Lobby Bots - LOBBYMOM">
   <meta property="twitter:description"
     content="Get instant access to free Fortnite lobby bots! Copy bot names to invite them to your lobby. Refreshed every 30 seconds.">
-  <meta property="twitter:image" content="https://lobby.mom/https://lobby.mom/awso/assets/LOBBYMOM.png">
+  <meta property="twitter:image" content="https://lobby.mom/awso/assets/LOBBYMOM.png">
 
   <!-- Website icon (favicon) -->
   <link rel="icon" type="image/png" href="https://lobby.mom/awso/assets/LOBBYMOM.png">
