--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <meta property="twitter:image" content="https://lobby.mom/awso/assets/LOBBYMOM.png">
 
   <!-- Website icon (favicon) -->
-  <link rel="icon" type="image/png" href="awso/assets/LOBBYMOM.png">
+  <link rel="icon" type="image/png" href="https://lobby.mom/awso/assets/LOBBYMOM.png">
 
   <!-- Bootstrap 5.3 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -52,14 +52,14 @@
   <link rel="stylesheet" href="https://paycoin-php.vercel.app/assets/css/fontawesome.css">
 
   <!-- Custom styles -->
-  <link rel="stylesheet" href="awso/css/awso.css">
+  <link rel="stylesheet" href="https://lobby.mom/awso/css/awso.css">
   <link rel="stylesheet" href="cs.css">
 </head>
 
 <body>
   <div class="center-content">
     <div class="text-center">
-      <img src="awso/assets/loading.png" alt="Coming Soon" class="img-fluid" style="max-width: 300px;">
+      <img src="https://lobby.mom/awso/assets/loading.png" alt="Coming Soon" class="img-fluid" style="max-width: 300px;">
       <h6 class="mt-3">Coming Soon..</h6>
       <button id="notifyBtn" class="notify-btn">
         <span id="btnText">GET NOTIFIED</span>
@@ -80,7 +80,7 @@
     <div class="timer-section">
       <div class="timer-container">
         <button id="timerButton"  class="btn btn-primary" type="button" disabled>
-          <img src="awso/assets/timer.png" width="20px"> 
+          <img src="https://lobby.mom/awso/assets/timer.png" width="20px"> 
           Next bots in <span id="countdown">30</span> seconds..
         </button>
         <div class="progress" role="progressbar">
@@ -154,7 +154,7 @@
           <div class="bot-info">
             <div class="bot-name">${bot}</div>
             <div class="bot-status">
-<span class="badge badge-light-success fs-8 fw-bold"><img src="awso/assets/user-status.png" width="16px"> ONLINE</span> <i class="fa-duotone fa-solid fa-circle-dot fnlb-badge"></i> <span class="badge badge-light-primary fs-8 fw-bold"><img src="awso/assets/available.png" width="16px"> AVAILABLE</span>
+<span class="badge badge-light-success fs-8 fw-bold"><img src="https://lobby.mom/awso/assets/user-status.png" width="16px"> ONLINE</span> <i class="fa-duotone fa-solid fa-circle-dot fnlb-badge"></i> <span class="badge badge-light-primary fs-8 fw-bold"><img src="https://lobby.mom/awso/assets/available.png" width="16px"> AVAILABLE</span>
             </div>
           </div>
           <div class="bot-action">
@@ -244,7 +244,7 @@
           // Send confirmation notification
           new Notification("You're subscribed!", {
             body: "We'll notify you when we launch.",
-            icon: "awso/assets/loading.png"
+            icon: "https://lobby.mom/awso/assets/loading.png"
           });
         } else {
           statusText.textContent = "Please enable browser notifications";
@@ -276,7 +276,7 @@
       if (localStorage.getItem('launchNotificationSubscribed') === 'true') {
         new Notification("We're Live!", {
           body: "Our service has officially launched!",
-          icon: "awso/assets/loading.png",
+          icon: "https://lobby.mom/awso/assets/loading.png",
           requireInteraction: true
         });
       }
