--- a/index.html
+++ b/index.html
@@ -56,18 +56,14 @@
   <link rel="stylesheet" href="cs.css">
 </head>
 <style>
-    /* Add this at the end of your existing CSS */
+<style>
+
   @media (max-width: 768px) {
     .bot-avatar {
-      border-radius: 50%;
-      overflow: hidden;
-    }
-    .bot-avatar img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      display: none;
     }
   }
+</style>
 </style>
   
 <body>
