--- a/thanks.html
+++ b/thanks.html
@@ -86,17 +86,23 @@
 
     <small class="muted mb-3">Payments are secured and powered by <a href="https://stripe.com" target="_blank" rel="noopener noreferrer">Stripe</a></small>
 
-    <div class="qr-card mb-4">
+    <div class="qr-card mb-4 text-start">
 
-
-
-
-<stripe-buy-button
-  buy-button-id="buy_btn_1S3GfCEYH7w5MZNfnDEcx8kx"
-  publishable-key="pk_live_51LlatMEYH7w5MZNfnvrUKp4bLgZMvxShkOXakgsZ3Ml73eG2RUOYRs8wqVwRrlXAlHNbbgJqxGzqIpktzH5i3qPO00PIWPJ0ql"
->
-</stripe-buy-button>
+    <div class="d-flex align-items-center mb-3">
+        <div class="s-badge me-2">✓</div>
+        <h4 class="fw-bold mb-0">Thank you for your donation!</h4>
     </div>
+
+    <p class="muted mb-3">Your support means a lot. To claim your donator role:</p>
+    <ul class="list-unstyled ms-2">
+        <li>👉 Join the <strong>bymiso Discord server</strong></li>
+        <li>👉 Head to <code>#💎︱miso-verified</code></li>
+        <li>👉 Click the green button to get your role</li>
+    </ul>
+
+    <p class="mt-3 text-center">✨ Have a wonderful day! ✨</p>
+</div>
+
 
     <h2 class="fw-bold mb-1" id="displayName">bymiso</h2>
     <div class="muted mb-4 kr fw-bold" id="cashtag">김민숙</div>
@@ -116,9 +122,6 @@
 
 
     <div class="py-4"></div>
-<script async
-  src="https://js.stripe.com/v3/buy-button.js">
-</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
