--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </stripe-buy-button>
     </div>
 
-    <h2 class="fw-bold mb-1" id="displayName">bymiso</h2>
+    <h2 class="fw-bold mb-1" id="displayName"><img src="bymiso-w" width="120px"></h2>
     <div class="muted mb-4 kr fw-bold" id="cashtag">김민숙</div>
 
     <div class="d-flex gap-3 justify-content-center flex-wrap">
