--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body class="min-vh-100 d-flex flex-column justify-content-center align-items-center text-center">
     <div class="py-4"></div>
     
-
+    <center><img src="bymiso-w.png" width="64px"></center>
     <small class="muted mb-3">Payments are secured and powered by <a href="https://stripe.com" target="_blank" rel="noopener noreferrer">Stripe</a></small>
 
     <div class="qr-card mb-4">
@@ -98,7 +98,7 @@
 </stripe-buy-button>
     </div>
 
-    <h2 class="fw-bold mb-1" id="displayName"><img src="bymiso-w.png" width="120px"></h2>
+    <h2 class="fw-bold mb-1" id="displayName">bymiso</h2>
     <div class="muted mb-4 kr fw-bold" id="cashtag">김민숙</div>
 
     <div class="d-flex gap-3 justify-content-center flex-wrap">
