--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             font-family: "Noto Sans KR", sans-serif;
         }
         a {
+            color: #fff600;
             text-decoration: none;
         }
     </style>
