--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pay bymiso</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <style>
         :root {
             --card-border: #232323;
@@ -74,6 +76,7 @@
         .kr {
             font-family: "Noto Sans KR", sans-serif;
         }
+
         a {
             color: #fff600;
             text-decoration: none;
@@ -83,33 +86,32 @@
 
 <body class="min-vh-100 d-flex flex-column justify-content-center align-items-center text-center">
     <div class="py-4"></div>
-    
-    <center><img src="bymiso-w.png" width="64px"></center>
-    <small class="muted mb-3">Payments are secured and powered by <a href="https://stripe.com" target="_blank" rel="noopener noreferrer">Stripe</a></small>
+
+    <center><img src="bymiso-w.png" width="64px"></center><br><br><br>
+    <small class="muted mb-3">Payments are secured and powered by <a href="https://stripe.com" target="_blank"
+            rel="noopener noreferrer">Stripe</a></small>
 
     <div class="qr-card mb-4">
 
 
 
 
-<stripe-buy-button
-  buy-button-id="buy_btn_1S3GfCEYH7w5MZNfnDEcx8kx"
-  publishable-key="pk_live_51LlatMEYH7w5MZNfnvrUKp4bLgZMvxShkOXakgsZ3Ml73eG2RUOYRs8wqVwRrlXAlHNbbgJqxGzqIpktzH5i3qPO00PIWPJ0ql"
->
-</stripe-buy-button>
+        <stripe-buy-button buy-button-id="buy_btn_1S3GfCEYH7w5MZNfnDEcx8kx"
+            publishable-key="pk_live_51LlatMEYH7w5MZNfnvrUKp4bLgZMvxShkOXakgsZ3Ml73eG2RUOYRs8wqVwRrlXAlHNbbgJqxGzqIpktzH5i3qPO00PIWPJ0ql">
+        </stripe-buy-button>
     </div>
 
     <h2 class="fw-bold mb-1" id="displayName">bymiso</h2>
     <div class="muted mb-4 kr fw-bold" id="cashtag">김민숙</div>
 
     <div class="d-flex gap-3 justify-content-center flex-wrap">
-        <a id="btnAppStore" class="btn btn-light app-pill d-flex align-items-center gap-2" href="https://fnlb.net/" target="_blank"
-            rel="noopener">
+        <a id="btnAppStore" class="btn btn-light app-pill d-flex align-items-center gap-2" href="https://fnlb.net/"
+            target="_blank" rel="noopener">
             <img src="fnlb.svg" width="24px">
             <span>FNLB</span>
         </a>
-        <a id="btnGooglePlay" class="btn btn-light app-pill d-flex align-items-center gap-2" href="https://bymiso.xyz/" target="_blank"
-            rel="noopener">
+        <a id="btnGooglePlay" class="btn btn-light app-pill d-flex align-items-center gap-2" href="https://bymiso.xyz/"
+            target="_blank" rel="noopener">
             <img src="discord.svg" width="16px">
             <span>bymiso</span>
         </a>
@@ -117,9 +119,8 @@
 
 
     <div class="py-4"></div>
-<script async
-  src="https://js.stripe.com/v3/buy-button.js">
-</script>
+    <script async src="https://js.stripe.com/v3/buy-button.js">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
