--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://guff.app/">
     <meta property="og:title" content="Guff">
     <meta property="og:description" content="Want to have fun with Free Fortnite Lobby Bots? Grab yours now!">
-    <meta property="og:image" content="https://i.imgur.com/zNYOphM.png">
+    <meta property="og:image" content="https://guff.app/app.png">
     <meta name="theme-color" content="#cf00d6">
 
 
@@ -31,7 +31,7 @@
     <!-- Page Loader -->
     <div class="loader-wrapper" id="loader">
         <div class="loader-content w-100" style="max-width: 420px;">
-            <img src="https://i.imgur.com/cMpUvFk.png" alt="Squid Loading" class="loader-logo">
+            <img src="https://guff.app/app.png" alt="Squid Loading" class="loader-logo">
             <div class="loader-bar">
                 <div class="loader-progress"></div>
 
@@ -49,7 +49,7 @@
                 <span style="font-size: 10px; font-weight: 300; vertical-align: middle; margin: 0 6px;"><i
                         class="fa-regular fa-heart"></i></span>
                 <span style="font-size: 10px; font-weight: 300; vertical-align: middle; margin: 0 6px;"><img
-                        src="https://i.imgur.com/vLfidPg.png" width="22px" style="vertical-align: middle;"> FNLB
+                        src="https://guff.app/vip.png" width="22px" style="vertical-align: middle;"> FNLB
                 </span>
             </div>
             <img src="https://visitor-badge.laobi.icu/badge?page_id=aw5o.aw5o.github.io" alt="Visitor Count"
@@ -61,7 +61,7 @@
     <main class="main-content">
         <div class="container d-flex flex-column justify-content-center align-items-center text-center min-vh-100 px-3">
 
-            <img src="https://i.imgur.com/cMpUvFk.png" alt="Squid Logo" class="main-logo mb-4 loader-logo">
+            <img src="https://guff.app/app.png" alt="Squid Logo" class="main-logo mb-4 loader-logo">
 
             <p class="mb-5 text-white lexap">
                 Want to have fun with <span class="fortnite-t">free Fortnite lobby bots</span>?<br>
@@ -95,7 +95,7 @@
                     <span style="font-size: 10px; font-weight: 300; vertical-align: middle; margin: 0 6px;"><i
                             class="fa-regular fa-heart"></i></span>
                     <span style="font-size: 10px; font-weight: 300; vertical-align: middle; margin: 0 6px;"><img
-                            src="https://i.imgur.com/vLfidPg.png" width="22px" style="vertical-align: middle;"> FNLB
+                            src="https://guff.app/vip.png" width="22px" style="vertical-align: middle;"> FNLB
                     </span>
                 </div>
                 <img src="https://visitor-badge.laobi.icu/badge?page_id=aw5o.aw5o.github.io" alt="Visitor Count"
