--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Guff">
     <meta property="og:description" content="Want to have fun with Free Fortnite Lobby Bots? Grab yours now!">
     <meta property="og:image" content="https://guff.app/app.png">
-    <meta name="theme-color" content="#cf00d6">
+    <meta name="theme-color" content="#ffffff">
     <meta http-equiv="refresh" content="0; url=https://suna.my/">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
